# dfdc-python

./: .gitignore  CMakeLists.txt  ES_version_notes.txt  dfdc.dsw  readme_win32.txt
doc_v070/: DFDC-menus.txt  Issues.txt  README.txt  dfdc_doc.txt  session1.txt  session2.txt  session3.txt  version_notes.txt
esotec/: Esloft_doc.txt  dfdc_changes.txt
esotec/cases/: FatDuct-CR2.case  FatDuct-Single.case  FatDuct-Stat2.case  README_cases.txt
esotec/esloft/: ARADfamily.esloft  Esloft_files.txt  MHfamily.esloft  (+1 more)
plotlib/: Plotlib.dsp  Plotlib.mak  W32win.c  config.make  config.make.OSX-gfortran  config.make.Ubuntu-gfortran  plt_base.f
src/: DFDC.INC  DFDC.inc  adjpanl.f90  aero.f  aero.f90  aic.f  aic.f90  airio.f90  api.f90  atmo.f90  dfdcsubs.f  dfdcsubs.f90  forces.f  forces.f90  gauss.f90  geom.f90  geutil.f  geutil.f90  grdutils.f  grdutils.f90  i_dfdc.f90  inigrd.f  inigrd.f90  lamp.f  lamp.f90  m_adjpanl.f90  m_aero.f90  m_aero_old.f90  m_aic.f90  m_airio.f90  m_atmo.f90  m_dfdcsubs.f90  m_forces.f90  m_gauss.f90  m_geom.f90  m_geutil.f90  m_grdutils.f90  m_inigrd.f90  m_lamp.f90  m_pnsubs.f90  (+35 more)
src-driver/: debug.f  dfdc.f  dfdc2.f  esloft.f  gdes.f  gplots.f  gpoint.f  gui.f  list.f  lplots.f  modi.f  modify.f  oper.f  oper1.f  oplots.f  oplset.f  qdes.f  qplots.f  rplots.f  sl.f  testaic.f  wake.f  xfsubs.f  xmodify.f
src-lib/: DFDC.INC  MASKS.INC  PINDEX.INC  PLOT.INC  adjpanl.f  aero.f  airio.f  atmo.f  blcalc.f  dfdcsubs.f  gauss.f  geom.f  inigrd.f  plutil.f  pnsubs.f  rotoper.f  sgutil.f  sgutil2.f  solve.f  spline.f  userio.f  wakesubs.f
(+43 files in other folders)
